@@ -104,7 +104,6 @@ import org.flowable.engine.impl.bpmn.behavior.IntermediateThrowCompensationEvent
 import org.flowable.engine.impl.bpmn.behavior.IntermediateThrowEscalationEventActivityBehavior;
 import org.flowable.engine.impl.bpmn.behavior.IntermediateThrowNoneEventActivityBehavior;
 import org.flowable.engine.impl.bpmn.behavior.IntermediateThrowSignalEventActivityBehavior;
-import org.flowable.engine.impl.bpmn.behavior.MailActivityBehavior;
 import org.flowable.engine.impl.bpmn.behavior.ManualTaskActivityBehavior;
 import org.flowable.engine.impl.bpmn.behavior.NoneEndEventActivityBehavior;
 import org.flowable.engine.impl.bpmn.behavior.NoneStartEventActivityBehavior;
@@ -128,6 +127,7 @@ import org.flowable.engine.impl.bpmn.helper.ClassDelegate;
 import org.flowable.engine.impl.bpmn.helper.ClassDelegateFactory;
 import org.flowable.engine.impl.bpmn.helper.DefaultClassDelegateFactory;
 import org.flowable.engine.impl.bpmn.http.DefaultBpmnHttpActivityDelegate;
+import org.flowable.engine.impl.bpmn.mail.BpmnMailActivityDelegate;
 import org.flowable.engine.impl.bpmn.parser.FieldDeclaration;
 import org.flowable.engine.impl.cfg.ProcessEngineConfigurationImpl;
 import org.flowable.engine.impl.delegate.ActivityBehavior;
@@ -170,12 +170,12 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
 
     @Override
     public ReceiveTaskActivityBehavior createReceiveTaskActivityBehavior(ReceiveTask receiveTask) {
-        return new ReceiveTaskActivityBehavior();
+        return new ReceiveTaskActivityBehavior(receiveTask.getId(), receiveTask.getSkipExpression());
     }
 
     @Override
     public ReceiveEventTaskActivityBehavior createReceiveEventTaskActivityBehavior(ReceiveTask receiveTask, String eventDefinitionKey) {
-        return new ReceiveEventTaskActivityBehavior(eventDefinitionKey);
+        return new ReceiveEventTaskActivityBehavior(eventDefinitionKey, receiveTask.getId(), receiveTask.getSkipExpression());
     }
 
     @Override
@@ -231,19 +231,16 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
     }
 
     @Override
-    public MailActivityBehavior createMailActivityBehavior(ServiceTask serviceTask) {
-        return createMailActivityBehavior(serviceTask.getId(), serviceTask.getFieldExtensions());
+    public ActivityBehavior createMailActivityBehavior(ServiceTask serviceTask) {
+        return classDelegateFactory.create(serviceTask.getId(), BpmnMailActivityDelegate.class.getName(),
+                createFieldDeclarations(serviceTask.getFieldExtensions()),
+                false, // Mail activity is never triggerable
+                getSkipExpressionFromServiceTask(serviceTask), serviceTask.getMapExceptions());
     }
 
     @Override
-    public MailActivityBehavior createMailActivityBehavior(SendTask sendTask) {
-        return createMailActivityBehavior(sendTask.getId(), sendTask.getFieldExtensions());
-    }
-
-    protected MailActivityBehavior createMailActivityBehavior(String taskId, List<FieldExtension> fields) {
-        List<FieldDeclaration> fieldDeclarations = createFieldDeclarations(fields);
-        return (MailActivityBehavior) ClassDelegate.defaultInstantiateDelegate(
-                MailActivityBehavior.class, fieldDeclarations);
+    public ActivityBehavior createMailActivityBehavior(SendTask sendTask) {
+        return classDelegateFactory.create(BpmnMailActivityDelegate.class.getName(), createFieldDeclarations(sendTask.getFieldExtensions()));
     }
 
     @Override
@@ -254,31 +251,6 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
     @Override
     public DmnActivityBehavior createDmnActivityBehavior(SendTask sendTask) {
         return new DmnActivityBehavior(sendTask);
-    }
-
-    // We do not want a hard dependency on Mule, hence we return
-    // ActivityBehavior and instantiate the delegate instance using a string instead of the Class itself.
-    @Override
-    public ActivityBehavior createMuleActivityBehavior(ServiceTask serviceTask) {
-        return createMuleActivityBehavior(serviceTask, serviceTask.getFieldExtensions());
-    }
-
-    @Override
-    public ActivityBehavior createMuleActivityBehavior(SendTask sendTask) {
-        return createMuleActivityBehavior(sendTask, sendTask.getFieldExtensions());
-    }
-
-    protected ActivityBehavior createMuleActivityBehavior(TaskWithFieldExtensions task, List<FieldExtension> fieldExtensions) {
-        try {
-
-            Class<?> theClass = Class.forName("org.flowable.mule.MuleSendActivityBehavior");
-            List<FieldDeclaration> fieldDeclarations = createFieldDeclarations(fieldExtensions);
-            return (ActivityBehavior) ClassDelegate.defaultInstantiateDelegate(
-                    theClass, fieldDeclarations);
-
-        } catch (ClassNotFoundException e) {
-            throw new FlowableException("Could not find org.flowable.mule.MuleSendActivityBehavior: ", e);
-        }
     }
 
     // We do not want a hard dependency on Camel, hence we return
@@ -391,7 +363,7 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
         if (StringUtils.isNotEmpty(businessRuleTask.getClassName())) {
             try {
                 Class<?> clazz = Class.forName(businessRuleTask.getClassName());
-                ruleActivity = (BusinessRuleTaskDelegate) clazz.newInstance();
+                ruleActivity = (BusinessRuleTaskDelegate) clazz.getConstructor().newInstance();
             } catch (Exception e) {
                 throw new FlowableException("Could not instantiate businessRuleTask (id:" + businessRuleTask.getId() + ") class: " +
                         businessRuleTask.getClassName(), e);
@@ -563,9 +535,9 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
     
     @Override
     public IntermediateCatchConditionalEventActivityBehavior createIntermediateCatchConditionalEventActivityBehavior(IntermediateCatchEvent intermediateCatchEvent, 
-                    ConditionalEventDefinition conditionalEventDefinition, String conditionExpression) {
+                    ConditionalEventDefinition conditionalEventDefinition, String conditionExpression, String conditionLanguage) {
         
-        return new IntermediateCatchConditionalEventActivityBehavior(conditionalEventDefinition, conditionExpression);
+        return new IntermediateCatchConditionalEventActivityBehavior(conditionalEventDefinition, conditionExpression, conditionLanguage);
     }
 
     @Override
@@ -630,7 +602,7 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
 
     @Override
     public ErrorEndEventActivityBehavior createErrorEndEventActivityBehavior(EndEvent endEvent, ErrorEventDefinition errorEventDefinition) {
-        return new ErrorEndEventActivityBehavior(errorEventDefinition.getErrorCode());
+        return new ErrorEndEventActivityBehavior(errorEventDefinition.getErrorCode(), endEvent.getOutParameters());
     }
     
     @Override
@@ -682,9 +654,9 @@ public class DefaultActivityBehaviorFactory extends AbstractBehaviorFactory impl
     
     @Override
     public BoundaryConditionalEventActivityBehavior createBoundaryConditionalEventActivityBehavior(BoundaryEvent boundaryEvent,
-            ConditionalEventDefinition conditionalEventDefinition, String conditionExpression, boolean interrupting) {
+            ConditionalEventDefinition conditionalEventDefinition, String conditionExpression, String conditionLanguage, boolean interrupting) {
 
-        return new BoundaryConditionalEventActivityBehavior(conditionalEventDefinition, conditionExpression, interrupting);
+        return new BoundaryConditionalEventActivityBehavior(conditionalEventDefinition, conditionExpression, conditionLanguage, interrupting);
     }
 
     @Override
